--- a/src/main/resources/templates/frontend/user/verify_fail.html
+++ b/src/main/resources/templates/frontend/user/verify_fail.html
@@ -27,7 +27,8 @@
 		    <h2>     </h2>
 		    <h4>請點選下列連結返回登入畫面</h4>
 		    <h2>     </h2>
-		    <h4 style="color:orange"><a th:href="@{/login}">返回登入</a></h4>
+		    <h3 style="color:orange"><a style="color:white" th:href="@{/login}">返回登入</a></h3>
+
 		</div>
 		</div>
         
