--- a/src/main/resources/templates/frontend/user/verify_success.html
+++ b/src/main/resources/templates/frontend/user/verify_success.html
@@ -24,7 +24,8 @@
         <div class="container text-center">
 		    <h3>恭喜您，您的帳戶已驗證通過，請點選下列連接立即登入！</h3>
 		    <h2>      </h2>
-		    <h3><a th:href="@{/login}">點我登入</a></h3>
+		    <h2><a style="color:white" th:href="@{/login}">點我登入</a></h2>
+
 		</div>
 		</div>
         
