--- a/src/main/resources/templates/backend/user-list.html
+++ b/src/main/resources/templates/backend/user-list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -98,8 +98,17 @@
 <!-- 								</a> -->
 							</p>
 							<p>
+<!-- 								<form th:action="@{userDel/}+${user.user_id}" th:method="POST" class="inline"> -->
+<!-- 									<button type="button" th:value="${user.user_id}" -->
+<!-- 										class="px-2 btn btn-delete btn-light btn-sm"> -->
+<!-- 									<i class="ti-trash"></i> -->
+<!-- 									th:id="'btn-delete' + ${comment.id}" -->
+																
+<!-- 									</button> -->
+<!-- 								</form> -->
 							<form action="/userDel/${user.user_id}" th:action="@{userDel/}+${user.user_id}" method="POST" class="inline-block">
-									<button type="submit" onclick="javascript:return del();" class="delete btn btn-info btn-sm ">
+<!-- 									<button type="submit" onclick="javascript:return del();" class="delete btn btn-info btn-sm ">  -->
+									<button type="submit" id="delete" class="delete btn btn-info btn-sm btn-delete">
 									<i class="mdi mdi-delete-forever"></i>
 									</button>
 							</form>
@@ -338,14 +347,34 @@
  	</script> 
  	
 	<script>
-	function del() {
-		var msg = "確定要刪除這筆會員資料嗎？";
-		if (confirm(msg)==true){
-		return true;
-		}else{
-		return false;
-		}
-	}
+// 	function del() {
+// 		var msg = "確定要刪除這筆會員資料嗎？";
+// 		if (confirm(msg)==true){
+// 		return true;
+// 		}else{
+// 		return false;
+// 		}
+// 	}
+	
+	document.getElementById("delete").addEventListener("click",function(){
+		Swal.fire({
+			  title: 'Are you sure?',
+			  text: "You won't be able to revert this!",
+			  icon: 'warning',
+			  showCancelButton: true,
+			  confirmButtonColor: '#3085d6',
+			  cancelButtonColor: '#d33',
+			  confirmButtonText: 'Yes, delete it!'
+			}).then((result) => {
+			  if (result.isConfirmed) {
+			    Swal.fire(
+			      'Deleted!',
+			      'Your file has been deleted.',
+			      'success'
+			    )
+			  }
+			})
+		})
 	</script>
 </body>
 
