--- a/src/main/resources/templates/frontend/user/user-detail.html
+++ b/src/main/resources/templates/frontend/user/user-detail.html
@@ -38,11 +38,11 @@
 										我的優惠券
 									</a>
 								</li>
-								<li class="bor18">
-									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
-										帳號安全
-									</a>
-								</li>
+<!-- 								<li class="bor18"> -->
+<!-- 									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 "> -->
+<!-- 										帳號安全 -->
+<!-- 									</a> -->
+<!-- 								</li> -->
 								<li class="bor18" sec:authorize="hasRole('USER')">
 									<a th:href="@{/become_dealer}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
 										成為店家
@@ -105,6 +105,7 @@
                     
                     <input type="hidden" name="password" th:field="*{password}"/>
                     <input type="hidden" name="authority" th:field="*{authority}"/>
+                    <input type="hidden" name="enabled" value="1"/>
 
                     <div class="row">
                       <div class="col-md-6">
@@ -181,7 +182,7 @@
                     <div class="row mt-4">
                       <div class="col-md-6">
                         <div class="form-group row">
-                          <label class="col-sm-3 col-form-label" for="ch_name">店家名稱</label>
+                          <label class="col-sm-3 col-form-label" for="dealer_name">店家名稱</label>
                           <div class="col-sm-9">
                             <input id="ch_name" type="text" class="form-control" name="ch_name" th:field="*{dealer_name}"/>
                           </div>
@@ -189,7 +190,7 @@
                       </div>
                       <div class="col-md-6">
                         <div class="form-group row">
-                          <label class="col-sm-3 col-form-label" for="en_name">負責人</label>
+                          <label class="col-sm-3 col-form-label" for="ch_name">負責人</label>
                           <div class="col-sm-9">
                             <input id="en_name" type="text" class="form-control" name="en_name" th:field="*{ch_name}"/>
                           </div>
@@ -218,6 +219,7 @@
                     
                     <input type="hidden" name="password" th:field="*{password}"/>
                     <input type="hidden" name="authority" th:field="*{authority}"/>
+                    <input type="hidden" name="enabled" value="1"/>
 
                   
 
@@ -256,11 +258,11 @@
 					
 					
                     <div class="d-sm-inline-block" style="float:left;">
-<!--                     <button type="submit" class="btn btn-warning rounded-pill justify-content-end">新增會員</button> -->
-<!--                     <button class="btn btn-light justify-content-end">取消新增</button> -->
-                    
 	                 <input type="submit" id="submit" name="submit" value="儲存" class="btn btn-warning rounded-pill my-5" style="width:150px">
-<!-- 					 <label><a th:href="@{/user/list}" class="btn btn-light justify-content-end" style="width:160px">取消</a></label> -->
+					</div>
+					
+                    <div class="d-sm-inline-block" style="float:left;">
+	                 <button type="button" id="userdetail" class="btn btn-warning rounded-pill my-5" style="width:150px">一鍵輸入</button>
 					</div>
 					
                   </form>
@@ -279,7 +281,7 @@
 	<div th:replace="frontend/partials/fragment :: modal1"></div>
 	<!-- javascript -->
 	<div th:replace="frontend/partials/fragment :: script"></div>
-	
+	<script th:src="@{/js/userdata.js}"></script>
 	<script th:src="@{/js/tw-city-selector.min.js}"></script>
 	<script>
 		
@@ -287,18 +289,17 @@
 			
 		})
 		
-		$(".btn-insert-opts").click(function(e){
+		$("#").click(function(e){
 			e.preventDefault();
 			Swal.fire({
 				icon: 'success',
 				title: '儲存成功',
-				text: "即將為您導回地點列表",
 				showConfirmButton: false,
 				timer: 1500
 			});
 
 			setInterval(function() {
-				$('#insert-opt-form').submit()
+				$('#submit').submit()
 			}, 1500);
 		})
 		
