--- a/src/main/resources/templates/frontend/login.html
+++ b/src/main/resources/templates/frontend/login.html
@@ -185,8 +185,29 @@
           document.getElementById("submit").disabled = true;
         }
     }
+    
+    
+	$("#admin-login").click(function() {
+		$('#username').val('admin@gmail.com')
+		$('#password').val('admin')
+
+	});
+
+	$("#dealer-login").click(function() {
+		$('#username').val('eeit454@gmail.com')
+		$('#password').val('eeit454')
+
+	});
+	
+	$("#user-login").click(function() {
+		$('#username').val('user@gmail.com')
+		$('#password').val('user')
+
+	});
   	
   	</script>
+  	
+  	
   	
   	
         
