--- a/src/main/resources/templates/frontend/user/become_dealer.html
+++ b/src/main/resources/templates/frontend/user/become_dealer.html
@@ -214,7 +214,7 @@
 // 		})
 		
 		$("#submit").click(function(e){
-			e.preventDefault();
+// 			e.preventDefault();
 			Swal.fire({
 				icon: 'success',
 				title: '成功成為店家',
@@ -223,9 +223,9 @@
 				timer: 2000
 			});
 
-// 			setInterval(function() {
-// 				$('#insert-opt-form').submit()
-// 			}, 1500);
+			setInterval(function() {
+				e;
+			}, 1500);
 		})
 		
 		$('.discount').on('blur', function () {
