--- a/src/main/resources/templates/frontend/user/user-detail.html
+++ b/src/main/resources/templates/frontend/user/user-detail.html
@@ -57,7 +57,7 @@
 					<div class="card">
 						<div class="card-body ">
 						
-                  <form class="form-sample" th:action="@{/userdetals/update}" method="post" id="form" th:object="${user}">
+                  <form class="form-sample" th:action="@{/userdetals/update}" method="post" id="myform" th:object="${user}"  enctype="multipart/form-data">
                     <input type="hidden" th:field="*{user_id}" />
  
 <!--  只有USER看得到 -->
@@ -163,8 +163,19 @@
                       <div class="col-md-12">
                         <div class="form-group row">
                           <label class="col-sm-1 col-form-label mr-5">地址</label>
-                          <div class="col-sm-10" style="width: 110%;">
+                          <div class="col-sm-10" style="width: 110%;padding-right: 0px;padding-left: 0px;">
                             <input type="text" name="address" id="address" class="form-control" th:field="*{address}"/>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="form-group row">
+                          <label class="col-sm-2 col-form-label">修改頭像</label>
+                          <div class="col-sm-10" style="width: 110%;">
+							<input type="file" class="form-control custom-file-input py-2 bgwhite" style="background-color: white; padding-bottom: 3px" name="imageUser" id="imageUser">
+							<input th:field="*{image}" hidden>
                           </div>
                         </div>
                       </div>
@@ -247,13 +258,27 @@
                       <div class="col-md-12">
                         <div class="form-group row">
                           <label class="col-sm-1 col-form-label mr-5">地址</label>
-                          <div class="col-sm-10" style="width: 110%;">
+                          <div class="col-sm-10" style="width: 110%;padding-right: 0px;padding-left: 0px;">
                             <input type="text" name="address" id="address" class="form-control" th:field="*{address}"/>
                           </div>
                         </div>
                       </div>
                     </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="form-group row">
+                          <label class="col-sm-2 col-form-label">修改頭像</label>
+                          <div class="col-sm-10" style="width: 110%;">
+							<input type="file" class="form-control custom-file-input py-2 bgwhite" style="background-color: white; padding-bottom: 3px" name="imageUser" id="imageUser">
+							<input th:field="*{image}" hidden>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
 					</div>
+					
+
 					
 					
 					
@@ -289,8 +314,8 @@
 			
 		})
 		
-		$("#").click(function(e){
-			e.preventDefault();
+		$("#submit").click(function(e){
+// 			e.preventDefault();
 			Swal.fire({
 				icon: 'success',
 				title: '儲存成功',
@@ -299,7 +324,7 @@
 			});
 
 			setInterval(function() {
-				$('#submit').submit()
+				e;
 			}, 1500);
 		})
 		
