--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -111,16 +111,13 @@
                     <!-- 						<a th:href="@{/login} @{/backend/index}" -->
                     <div class="account p-t-22" sec:authorize="!isAuthenticated()">
                         <a th:href="@{/login}"
-                           class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                           data-notify="0">
+                           class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
                             <i class="zmdi zmdi-account"></i>
                         </a>
                     </div>
 
                     <div class="account p-t-22" sec:authorize="isAuthenticated()">
-                        <a
-                                class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                                data-notify="0">
+                        <a class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
                             <i class="zmdi zmdi-account"></i>
                         </a>
                         <!--                     </div> -->
@@ -172,13 +169,11 @@
                 <i class="zmdi zmdi-shopping-cart"></i>
             </div>
 
-            <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti"
-               data-notify="0">
+            <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10">
                 <i class="zmdi zmdi-favorite-outline"></i>
             </a>
             <a th:href="@{/backend/index}"
-               class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-               data-notify="0">
+               class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti">
                 <i class="zmdi zmdi-account"></i>
             </a>
         </div>
