--- a/src/main/resources/templates/frontend/order/client-order.html
+++ b/src/main/resources/templates/frontend/order/client-order.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<script src="https://demeter.5fpro.com/tw/zipcode-selector.js"></script>
 <head th:replace="frontend/partials/fragment :: head"></head>
 
 <body class="">
@@ -9,8 +11,10 @@
 	<!-- Cart 購物車 -->
 	<div th:replace="frontend/partials/fragment :: cart"></div>
 
-	<section class="bg-img1 txt-center p-lr-15 p-tb-92" th:style="'background-image: url(' + @{/images/bg-02.jpg} + ');'">
+	<section class="bg-img1 txt-center p-lr-15 p-tb-92"
+		th:style="'background-image: url(' + @{/images/bg-02.jpg} + ');'">
 		<h2 class="ltext-103 font-weight-bold clwhite txt-center">訂單紀錄</h2>
+	
 	</section>
 	<!-- Product 內文 -->
 	<div class="bg0">
@@ -19,7 +23,29 @@
 				<div class="col-md-3 p-b-80 bg6">
 					<div class="side-menu">
 						<div class="p-t-55">
-							<h2 class="ltext-103 cl5 font-weight-bold m-b-30 p-lr-20">訂單紀錄</h2>
+							<h2 class="ltext-103 cl5 font-weight-bold m-b-30 p-lr-20">會員中心</h2>
+								<ul class="p-lr-20">
+								<li class="bor18">
+									<a th:href="@{/userdetails}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
+										基本資料
+									</a>
+								</li>
+								<li class="bor18">
+									<a th:href="@{/order/client/orderlist}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
+										我的訂單
+									</a>
+								</li>
+								<li class="bor18">
+									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
+										帳號安全
+									</a>
+								</li>
+								<li class="bor18" sec:authorize="hasRole('USER')">
+									<a th:href="@{/become_dealer}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
+										成為店家
+									</a>
+								</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -30,35 +56,41 @@
 						<div class="card-body">
 							<h4 class="card-title font-weight-bold my-3">訂單列表</h4>
 							<div class="p-t-20">
-								<table id="data-table" class="display table table-hover w-100" style="text-align: center">
-										<thead>
-				                        <tr>
-				                          <th scope="col" class="text-center">訂單編號</th>
-				                          <th scope="col" class="text-center">會員編號</th>
-				                          <th scope="col" class="text-center">訂購日期</th>
-				                          <th scope="col" class="text-center">總價</th>                 
-				                          <th scope="col" class="text-center">狀態</th>    
-				                          <th scope="col" class="text-center">詳細</th>
-				                                 
-				                        </tr>
-				                      </thead>
-				                      <tbody>
-				                      	  <tr class="odd gradeX" scope="row" th:each="orderBean:${orderBeans}">
-				                      		<td th:text="${orderBean.orderNo}"></td>     
-				                      		<td th:text="${orderBean.memberId}"></td>     
-				                      		<td th:text="${orderBean.orderDate}"></td>     
-				                      		<td th:text="${orderBean.totalPrice}"></td>     
-				                      		<td th:switch="${orderBean.status}">
-				                      			<span th:case="0">未付款</span>     
-				                      			<span th:case="1">已付款</span>     
-				                      			<span th:case="2">已完成</span>     
-				                      			</td>
-				                      		<td>
-				                      		<button type="button" th:value="${orderBean.orderNo}" class="btn btn-success btn-detail">詳細</button>				                      		
-				                      		</td>	
-				                      					
-				                        </tr>
-				                      </tbody>
+								<table id="data-table" class="display table table-hover w-100"
+									style="text-align: center">
+									<thead>
+										<tr>
+											<th scope="col" class="text-center">訂單編號</th>
+											<th scope="col" class="text-center">訂購日期</th>
+											<th scope="col" class="text-center">總價</th>
+											<th scope="col" class="text-center">狀態</th>
+											<th scope="col" class="text-center">詳細</th>
+											<th scope="col" class="text-center">刪除</th>
+
+										</tr>
+									</thead>
+									<tbody>
+										<tr class="odd gradeX" scope="row"
+											th:each="orderBean:${orderBeans}">
+											<td th:text="${orderBean.orderNo}"></td>
+											<td th:text="${orderBean.orderDate}"></td>
+											<td th:text="${orderBean.totalPrice}"></td>
+											<td th:switch="${orderBean.status}">
+												<span th:case="0">未付款</span>
+												<span th:case="1">已付款</span>
+												<span th:case="2">已完成</span></td>
+											<td>
+												<button type="button" th:value="${orderBean.orderNo}"
+													class="btn btn-success btn-detail">詳細</button>
+												
+												<button type="button" th:onclick="goECpay([[${orderBean.orderNo}]])" 
+												class="btn btn-primary btn-complete" th:if="${orderBean.status == 0}">付款</button>
+												
+													</td>
+											<td><button type="button" class="btn btn-danger btn-delete"
+                      		th:onclick="deletealert([[${orderBean.orderNo}]])" th:if="${orderBean.status == 0}">刪除</button></td>
+										</tr>
+									</tbody>
 								</table>
 							</div>
 						</div>
@@ -76,18 +108,164 @@
 	<!-- javascript -->
 	<div th:replace="frontend/partials/fragment :: script"></div>
 
-	<script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}" src="vendors/sweetalert/sweetalert2.all.min.js"></script>
-	<script th:src="@{/vendors/datatables.net/jquery.dataTables.js}" src="vendors/datatables.net/jquery.dataTables.js"></script>
-	<script th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}" src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
-	<script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
+	<script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}"
+		src="vendors/sweetalert/sweetalert2.all.min.js"></script>
+	<script th:src="@{/vendors/datatables.net/jquery.dataTables.js}"
+		src="vendors/datatables.net/jquery.dataTables.js"></script>
+	<script
+		th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}"
+		src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+	<script th:src="@{/js/dataTables.select.min.js}"
+		src="js/dataTables.select.min.js"></script>
 	<script>
-	
-	 	$(document).ready(function() {
-		    $('#data-table').DataTable({
- 
-	  		});
-	  		});
-			
+		$(document).ready(function() {
+			$('#data-table').DataTable({
+
+			});
+		});
+		
+		 function goECpay(orderNo) {
+	  		 
+		 		Swal.fire({
+		 			  title: '是否進行付款',
+		 			  text: "訂單狀態將變更為 已付款",
+		 			  icon: 'warning',
+		 			  showCancelButton: true,
+		 			  confirmButtonColor: '#3085d6',
+		 			  cancelButtonColor: '#d33',
+		 			 cancelButtonText: '取消',
+		 			  confirmButtonText: '確認, 我要付款'
+		 			}).then((result) => {
+		 			  if (result.isConfirmed) {
+		 				  location = "/gotrip/goECPay/" + orderNo
+		 			  }
+		 			})
+			  	   
+			  	 } 
+		 
+		  function deletealert(orderNo) {
+		    	 
+	          Swal.fire({
+	            title: '是否刪除訂單?',
+	            text: "訂單無法復原，若要刪除，請按下請確認",
+	            icon: 'warning',
+	            showCancelButton: true,
+	            cancelButtonText: '取消',
+	            confirmButtonColor: '#cc0808',
+	            cancelButtonColor: '#2e9e48',
+	            confirmButtonText: '我要刪除'
+	          }).then((result) => {
+	            if (result.isConfirmed) {
+	              $.ajax({
+	                type: "get",
+	                url: "/gotrip/order/delete/" + orderNo,
+
+	                success: function (msg) {
+	                  Swal.fire(
+	                          '已刪除!',
+	                          '訂單已成功刪除!',
+	                          'success'
+	                  ).then((result) => {
+	                    if (result.isConfirmed) {
+	                      location.reload();
+	                    }
+	                  })
+	                },
+	                error: function (msg) {
+	                 
+	                  Swal.fire({
+	                    icon: 'error',
+	                    title: '發生錯誤',
+	                    text: '訂單可能未成功刪除,請確認'                    
+	                  })
+	              	console.log(jqXHR);
+					console.log(textStatus); 
+					console.log(errorThrown);
+	                }
+	              });
+
+	            }
+	          })
+	     }
+		  
+		  
+		  
+		  	$('.btn-detail').on('click', function() {
+		  		var	orderId = $(this).attr('value');
+		  		console.log(orderId);
+		  		$.ajax({
+		  			type:'post',
+		  			url:'/gotrip/order/getSingleOrder',
+		  			datatype:'josn',
+		  			data:{
+		  				orderId:orderId
+		  			},
+		  			success: function(data){
+		  				
+		  			
+		  				console.log(data);
+		  				
+		  			  var  html =  '<table class="table table-bordered">' +
+		  				    	'<thead>' +
+			  				    '<tr>' +
+			  				    '<th scope="col">商品編號</th>' +
+			  				    '<th scope="col">類別</th>' +
+			  				    '<th scope="col">品項</th>' +
+			  				    '<th scope="col">預定日期</th>' +
+			  				    '<th scope="col">單價</th>' +
+			  				    '<th scope="col">數量</th>' +
+			  				    '<th scope="col">總價</th>' +
+			  				    '</tr>' +
+			  				    '</thead>' +
+			  					 '<tbody>';
+			  			$.each(data.items, function(i) {
+			  			let category;	
+			  			if(data.items[i].type == "ticket"){
+			  				category = '票券'
+			  			}else if(data.items[i].type == "hotel"){
+			  				category = '住宿'
+			  			}else if(data.items[i].type == "car"){
+			  				category = '租車'
+			  			}
+			  			let goDate = data.items[i].goDate;
+			  			
+			  			if(goDate == null){
+			  				goDate = '無期限';
+			  			}
+			  			
+		  				html += '<tr>' +
+		  						'<td>' + data.items[i].itemNo + '</td>' +
+		  						'<td>' + category + '</td>' +
+		  						'<td>' + data.items[i].itemInfo + '</td>' +
+		  						'<td>' + goDate + '</td>' +
+		  						'<td>' + data.items[i].unitPrice + '</td>' +
+		  						'<td>' + data.items[i].quantity + '</td>' +
+		  						'<td>' + data.items[i].unitPrice * data.items[i].quantity + '</td>' +
+		  						'</tr>';
+			  			});
+			  			html += '</tbody>' +
+	  							'</table>';
+		  				Swal.fire({
+		  				  icon: 'info',
+		  				  title: '訂單明細',
+		  				  html : html,
+		  				  width: 1000
+		  				})
+		 
+		  			}, 
+					error: function(jqXHR,textStatus,errorThrown) {
+						console.log(jqXHR);
+						console.log(textStatus); 
+						console.log(errorThrown);
+					}
+		  			
+		  			
+		  			
+		  		});
+		  	
+		  		
+		  		
+		  	});
 	</script>
 
 </body>
