--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -801,60 +801,91 @@
 
 
 <!--    購物車script -->
-<script>
-
-    $(document).on('click', '.plus-cart', function () {
-        let itemId = $('.get-itemid').attr('id');
-        let type = 'hotel';
-        let qty = $('.get-qty').val();
-        let date = $('.get-date').val();
-        console.log(itemId + "  " + date)
-        $.ajax({
-            type: 'GET',
-            url: '/gotrip/addToCart',
-            data: {
-                productId: itemId,
-                type: type,
-                qty: qty,
-                date: date
-            },
-            dataType: 'json',
-            async: false,
-            success: function (data) {
-
-                console.log(data.itemNumber);
-
-                $('#cartIcon').attr("data-notify", data.itemNumber);
-                console.log('data' + data.itemNumber)
-                Swal.fire({
-                    position: 'center',
-                    icon: 'success',
-                    title: '已加入購物車',
-                    showConfirmButton: false,
-                    timer: 1500
-                });
-            },
-            error: function (jqXHR, textStatus, errorThrown, data) {
-                console.log(data)
-                console.log(jqXHR);
-                console.log(textStatus);
-                console.log(jqXHR.responseText);
-            }
-
-        });
-    });
-    //	  input number的增加.減少JS
-    //  [ +/- num product ]*/
-    $(document).on('click', '.btn-num-product-down', function () {
-        var numProduct = Number($(this).next().val());
-        if (numProduct > 1) $(this).next().val(numProduct - 1);
-    });
-
-    $(document).on('click', '.btn-num-product-up', function () {
-        var numProduct = Number($(this).prev().val());
-        if (numProduct < 99) $(this).prev().val(numProduct + 1);
-    });
-</script>
+    <script>
+    
+	$(document).on('click','.plus-cart',function(){
+		
+		
+		
+		let	itemId = $('.get-itemid').attr('id');
+		let type = 'hotel';
+		let qty = $('.get-qty').val();
+		let date = $('.get-date').val();
+		
+		var dtToday = new Date();
+		
+		var mydate = new Date(date);
+		
+		console.log(mydate + '   '  +  dtToday);
+// 		日期輸入驗證判斷
+		if(mydate <= dtToday){
+			Swal.fire({
+				  icon: 'error',
+				  title: '日期不得選擇今天(含)之前'
+				})
+			return ; 
+		}
+		
+		if(date == ""){
+			Swal.fire({
+				  icon: 'error',
+				  title: '請選擇日期!'
+				})
+			return ; 	
+		}
+	
+			console.log(itemId + "  " + date)
+			 $.ajax({
+		            type: 'GET',
+		            url: '/gotrip/addToCart',
+		            data:{
+		            	productId: itemId,
+		            	type: type,
+		            	qty: qty,
+		            	date: date
+		            	},
+		            dataType: 'json',
+		            async:false,
+		            success: function (data) {
+		     	
+		                console.log(data.itemNumber);	
+		                
+		                $('#cartIcon').attr("data-notify",data.itemNumber);
+		                console.log('data' + data.itemNumber)   
+		                Swal.fire({
+		                	  position: 'center',
+		                	  icon: 'success',
+		                	  title: '已加入購物車',
+		                	  showConfirmButton: false,
+		                	  timer: 1500
+		                	});
+		            },
+		    		error: function(jqXHR,textStatus,errorThrown,data) {
+		    			 console.log(data)
+						console.log(jqXHR);
+						console.log(textStatus); 
+						console.log(jqXHR.responseText);
+					}
+		                	                
+		});	
+		
+		
+		
+	
+		});
+	
+	//	  input number的增加.減少JS
+	//  [ +/- num product ]*/
+		   $(document).on('click','.btn-num-product-down' ,function(){
+		       var numProduct = Number($(this).next().val());
+		       if(numProduct > 1) $(this).next().val(numProduct - 1);
+		   });
+		   
+		   $(document).on('click','.btn-num-product-up', function(){
+		       var numProduct = Number($(this).prev().val());
+		       if(numProduct < 99) $(this).prev().val(numProduct + 1);
+		   });
+    </script>
 
 
 </body>
