--- a/src/main/resources/templates/frontend/user/user-detail.html
+++ b/src/main/resources/templates/frontend/user/user-detail.html
@@ -29,13 +29,8 @@
 									</a>
 								</li>
 								<li class="bor18">
-									<a th:href="@{/vendor/cars/locations}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
+									<a th:href="@{/order/client/orderlist}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
 										我的訂單
-									</a>
-								</li>
-								<li class="bor18">
-									<a th:href="@{/vendor/cars/locations/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
-										我的優惠券
 									</a>
 								</li>
 <!-- 								<li class="bor18"> -->
