--- a/src/main/resources/templates/backend/car/car-loc-form.html
+++ b/src/main/resources/templates/backend/car/car-loc-form.html
@@ -43,7 +43,7 @@
 											<input th:field="*{companyName}" id="companyName" type="hidden"/>
 											<div class="col-md-6">
 												<div class="form-group row">
-													<label class="col-sm-3 col-form-label" for="type">車款類別</label>
+													<label class="col-sm-3 col-form-label" for="type">上架狀態</label>
 													<div class="col-sm-9">
 														<select th:field="*{status}" name="status" id="status" class="form-control">
 															<option value="顯示">顯示</option>
