--- a/src/main/resources/templates/frontend/order/client-order.html
+++ b/src/main/resources/templates/frontend/order/client-order.html
@@ -35,11 +35,11 @@
 										我的訂單
 									</a>
 								</li>
-								<li class="bor18">
-									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
-										帳號安全
-									</a>
-								</li>
+<!-- 								<li class="bor18"> -->
+<!-- 									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 "> -->
+<!-- 										帳號安全 -->
+<!-- 									</a> -->
+<!-- 								</li> -->
 								<li class="bor18" sec:authorize="hasRole('USER')">
 									<a th:href="@{/become_dealer}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 ">
 										成為店家
