--- a/src/main/resources/templates/frontend/car/vendor-loc-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-loc-form.html
@@ -61,13 +61,13 @@
 								<div class="row form-group my-4">
 									<div class="col-lg-1"></div>
 									<label class="col-lg-2 col-form-label" for="name">上架狀態</label>
-									<div class="col-lg-7">
+									<div class="col-lg-7" id="status-div">
 										
 										<select th:field="*{status}" name="status" id="status" style="background-color: white" class="form-control">
 											<option value="顯示">顯示</option>
 											<option value="隱藏">隱藏</option>
 										</select>	
-										<p id="showStatus" style="display: none; color: #ee0000">對於上架狀態若有疑問，請聯絡平台管理員</p>								
+											
 									</div>
 								</div>
 								<div class="row form-group my-4">
@@ -199,11 +199,13 @@
 			$('.district').blur()
 			
 	  		if ($('#status-text').text() == '停權') {
-	  			$('#status').append('<option value="停權">停權</option>');
-	  			
-	  			$('#status').attr("disabled", true);
-	  			$('#status').css("background-color","#eee")
-	  			$('#showStatus').css("display", "block")
+	  			$('#status').hide();
+	  			$('#status-div').append('<input type="text" class="form-control" value="停權" readonly>');
+	  			$('#status-div').append('<p id="showStatus" style="color: #ee0000">對於上架狀態若有疑問，請聯絡平台管理員</p>');
+// 	  			$('#status').append('<option value="停權">停權</option>');
+// 	  			$('#status').attr("disabled", true);
+// 	  			$('#status').css("background-color","#eee")
+// 	  			$('#showStatus').css("display", "block")
 	  		}
 	
 		})
